service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webspoon
  # namespace: webspoon
  labels:
    run: webspoon
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    run: webspoon
